_archive/content-services/4.1/concepts/installs-eval-intro.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
category: [Installation, Alfresco Server]
keyword: [simple, install]
---

# Installing Alfresco using setup wizards

This section includes instructions that describe the quickest way to install Alfresco using the setup wizards.

-   **[Installing Alfresco Enterprise on Linux](../tasks/simpleinstall-enterprise-lin.md)**  
The setup wizard for Linux installs all the software and components that you require for running Alfresco. This setup wizard installs Alfresco and additional software, including a Tomcat application server, PostgreSQL database, JDK, OpenOffice, SWFTools, and ImageMagick.
-   **[Installing Alfresco Enterprise on Windows](../tasks/simpleinstall-enterprise-win.md)**  
The setup wizard for Microsoft Windows installs all the software and components that you require for running Alfresco. This setup wizard installs Alfresco and additional software, including a Tomcat application server, PostgreSQL database, JDK, OpenOffice, SWFTools, and ImageMagick.

**Parent topic:**[Installing](../concepts/master-ch-install.md)

