_archive/content-services/4.2/concepts/installs-eval-intro.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
category: [Installation, Alfresco Server]
keyword: [simple, install]
---

# Installing Alfresco using setup wizards

This section includes instructions that describe the quickest way to install Alfresco using the setup wizards.

-   **[Installing Alfresco Enterprise on Linux](../tasks/simpleinstall-enterprise-lin.md)**  
The setup wizard for Linux installs all the software and components that you require for running Alfresco. This setup wizard installs Alfresco and additional software, including a including a Tomcat application server, PostgreSQL database, SWFTools, LibreOffice, and ImageMagick.
-   **[Installing Alfresco Enterprise on Windows](../tasks/simpleinstall-enterprise-win.md)**  
The setup wizard for Microsoft Windows installs all the software and components that you require for running Alfresco. This setup wizard installs Alfresco and additional software, including a Tomcat application server, PostgreSQL database, SWFTools, LibreOffice, and ImageMagick.
-   **[Installing Alfresco Enterprise in an unattended mode](../concepts/silent-alf-install.md)**  
Alfresco distributes binary all-in-one installers which include a setup wizard built with Bitrock technology. This topic describes how to automate the installation process by running the installers in an unattended mode.

**Parent topic:**[Installing](../concepts/master-ch-install.md)

